website/versioned_docs/version-2.0.x/reference/subsystems/bandit.mdx
---
title: bandit
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for finding security issues in Python code (https://bandit.readthedocs.io).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[bandit]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]bandit-skip`}
  env_repr="PANTS_BANDIT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Bandit when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`
</Option>

### `args`

<Option
  cli_repr={`--bandit-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_BANDIT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Bandit, e.g. `--bandit-args="--skip B101,B308
  --confidence"`
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--bandit-version=<str>`}
  env_repr="PANTS_BANDIT_VERSION"
  default_repr={`bandit>=1.6.2,<1.7`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--bandit-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_BANDIT_EXTRA_REQUIREMENTS"
  default_repr={`[\n  "setuptools<45",\n  "stevedore<3"\n]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--bandit-entry-point=<str>`}
  env_repr="PANTS_BANDIT_ENTRY_POINT"
  default_repr={`bandit`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `config`

<Option
  cli_repr={`--bandit-config=<file_option>`}
  env_repr="PANTS_BANDIT_CONFIG"
  default_repr={`None`}
>
  Path to a Bandit YAML config file
</Option>

## Deprecated options

### `interpreter_constraints`

<Option
  cli_repr={`--bandit-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_BANDIT_INTERPRETER_CONSTRAINTS"
  default_repr={`[]`}
  removal_version="2.1.0.dev0"
  removal_hint={
    "This option no longer does anything, as Pants auto-configures the interpreter constraints for bandit based on your code's interpreter constraints."
  }
>
  Python interpreter constraints for this tool.
</Option>

</span>

